--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title: Hanlin Cai
+title: Yifan Zhou
 # tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https://yiifanzhou.github.io/
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
+  name: Yifan Zhou
   avatar: hanlin.jpg
   # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: hanlin.cai@ieee.org
+  email: yifan_zhou@tju.edu.cn
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter: lancecai2002
-  github: GuangLun2000
+  github: yiifanzhou
   linkedin: hanlincai
   scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   bilibili: 594030035
