--- a/_config.yml
+++ b/_config.yml
@@ -84,4 +84,5 @@ disqus:
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "minimal-mistakes.sublime-project", "minimal-mistakes.sublime-workspace"]
 
-# Latest update in 2023/12/10 by Hanlin Cai.
+# Latest update in 2024/4/5 by Yifan Zhou.
+# URL: https://yiifanzhou.github.io/
