--- a/_config.yml
+++ b/_config.yml
@@ -33,8 +33,8 @@ links:
     url: /
   - title: 学业
     url: /study/
-  - title: 科研
-    url: /researches/
+  - title: 项目
+    url: /projects/
   - title: 荣誉
     url: /awards/
   - title: 课余
